# smart-scale

./: .gitignore  LICENSE  README.md  pyproject.toml  todos.md
backend/scripts/: exp.py
backend/smart_scale/: analysis.py  app.py  database.py  main.py  server.py
frontend/: app.js  index.html  manifest.json  style.css
python/scripts/: exp.py  test_watcher.py
python/smart_scale/: __init__.py  main.py
python/tests/: conftest.py
python/tests/data/watched_files/: b.txt
