[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-scale"
version = "0.1.0"
description = "Smooths bodyweight curve w/ rolling averages"
readme = "README.md"
authors = [
    { name = "Alex Pickering", email = "alex.pickering15@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["smart-scale"]

[tool.hatch.build.targets.wheel]
packages = ["backend/smart_scale"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]

[project.scripts]
smart-scale = "smart_scale:main"
smart-scale-serve = "smart_scale.server:run"